@@ -12,6 +12,7 @@ xvfb-run --server-args="-screen 0 1920x1080x24" -a ./ags_check_system_functional
 xvfb-run --server-args="-screen 0 1920x1080x24" -a ./ags_check_system_functional_drum_test
 xvfb-run --server-args="-screen 0 1920x1080x24" -a ./ags_check_system_functional_matrix_test
 xvfb-run --server-args="-screen 0 1920x1080x24" -a ./ags_check_system_functional_synth_test
+xvfb-run --server-args="-screen 0 1920x1080x24" -a ./ags_check_system_functional_hybrid_synth_test
 xvfb-run --server-args="-screen 0 1920x1080x24" -a ./ags_check_system_functional_ffplayer_test
 xvfb-run --server-args="-screen 0 1920x1080x24" -a ./ags_check_system_functional_notation_edit_test
 xvfb-run --server-args="-screen 0 1920x1080x24" -a ./ags_check_system_functional_audio_config_test
