@@ -8,7 +8,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([gsequencer],[3.16.6],[jkraehemann@gmail.com])
+AC_INIT([gsequencer],[3.16.7],[jkraehemann@gmail.com])
 AM_INIT_AUTOMAKE([subdir-objects -Wno-portability])
 AC_CONFIG_SRCDIR([ags/config.h.in])
 AC_CONFIG_HEADERS([ags/config.h])
@@ -415,8 +415,8 @@ AC_DEFINE([HAVE_GLIB_2_56], [1], [GLib 2.56 available])
 AC_DEFINE([HAVE_GLIB_2_62], [0], [GLib 2.62 available])
 AC_DEFINE([HAVE_GLIB_2_68], [0], [GLib 2.68 available])
 
+AM_CONDITIONAL([HAVE_INTROSPECTION], [test "xno" == xyes])
 GOBJECT_INTROSPECTION_CHECK([1.30.0])
-# AM_CONDITIONAL([HAVE_INTROSPECTION], [test "xno" == xyes])
 
 PKG_CHECK_MODULES([GIO], [gio-2.0 >= 2.56.0 glib-2.0 >= 2.56.0 gmodule-2.0 >= 2.56.0 gthread-2.0 >= 2.56.0])
 AC_SUBST(GIO_CFLAGS)
